import {
	afterAll,
	afterEach,
	describe,
	expect,
	it,
	vi
} from "vitest";
import { cleanup, fireEvent, render } from "@testing-library/svelte";
import "jsdom-worker";

import { getAsHTMLElement } from "$lib/dusk/test-helpers";

import { Send } from "..";

describe("Send", () => {
	/** @type {(n: number) => string} */
	const formatter = n => n.toString().replace(/(\d(?!$))/g, "$1-");
	const lastTxId = "some-id";
	const baseProps = {
		execute: vi.fn().mockResolvedValue(lastTxId),
		fee: (1 * 20000000 * 0.000000001).toString(),
		formatter,
		gasSettings: {
			fee: (1 * 20000000 * 0.000000001).toString(),
			gasLimit: 20000000,
			gasLimitLower: 10000000,
			gasLimitUpper: 1000000000,
			gasPrice: 1,
			gasPriceLower: 1
		},
		spendable: 1000,
		statuses: [{
			label: "Spendable",
			value: "1,000.000000000"
		}]
	};
	const address =
		"aB5rL7yC2zK9eV3xH1gQ6fP4jD8sM0iU2oX7wG9nZ8lT3hU4jP5mK8nS6qJ3wF4aA9bB2cC5dD8eE7";

	afterEach(() => {
		cleanup();
		baseProps.execute.mockClear();
	});

	it("renders the Send component Amount step", () => {
		const { container } = render(Send, baseProps);

		expect(container.firstChild).toMatchSnapshot();
	});

	it("sets the amount to max on click and checks if next button is enabled", async () => {
		const { getByRole } = render(Send, baseProps);

		const component = getByRole("button", { name: "USE MAX" });

		await fireEvent.click(component);

		const input = getByRole("spinbutton");

		expect(input).toHaveValue(baseProps.spendable);

		const next = getByRole("button", { name: "Next" });

		expect(next).toBeEnabled();
	});

	it("sets amount to zero and checks next if button is disabled", async () => {
		const { getByRole } = render(Send, baseProps);

		const input = getByRole("spinbutton");

		await fireEvent.input(input, { target: { value: 0 } });

		expect(input).toHaveValue(0);

		const next = getByRole("button", { name: "Next" });

		expect(next).toBeDisabled();
	});

	it("renders the Send component Address step", async () => {
		const { container, getByRole } = render(Send, baseProps);

		const next = getByRole("button", { name: "Next" });

		await fireEvent.click(next);

		expect(container.firstChild).toMatchSnapshot();
	});

	it("checks input for address value and next button if disabled", async () => {
		const { getByRole } = render(Send, baseProps);

		const next = getByRole("button", { name: "Next" });

		await fireEvent.click(next);

		const input = getByRole("textbox");

		expect(input).toHaveValue("");
	});

	it("checks input for address value and next button if enabled", async () => {
		const { getByRole } = render(Send, baseProps);

		const next = getByRole("button", { name: "Next" });

		await fireEvent.click(next);

		const input = getByRole("textbox");

		await fireEvent.input(input, { target: { value: address } });

		expect(input).toHaveValue(address);

		expect(next).toBeEnabled();
	});

	it("renders the Send component Review step", async () => {
		const { container, getByRole } = render(Send, baseProps);

		const next = getByRole("button", { name: "Next" });

		await fireEvent.click(next);

		const next1 = getByRole("button", { name: "Next" });

		await fireEvent.click(next1);

		expect(container.firstChild).toMatchSnapshot();
	});

	it("checks the displayed amount and address", async () => {
		const amount = 2345;
		const { container, getByRole } = render(Send, baseProps);

		const amountInput = getByRole("spinbutton");

		await fireEvent.input(amountInput, { target: { value: amount } });

		const next = getByRole("button", { name: "Next" });

		await fireEvent.click(next);

		const input = getByRole("textbox");

		await fireEvent.input(input, { target: { value: address } });

		const next1 = getByRole("button", { name: "Next" });

		await fireEvent.click(next1);

		const value = getAsHTMLElement(container, ".operation__review-amount span");

		expect(value.textContent).toBe(baseProps.formatter(amount));

		const key = getAsHTMLElement(container, ".operation__review-address span");

		expect(key.textContent).toBe(address);
	});

	describe("Send operation", () => {
		vi.useFakeTimers();

		const amount = 567;
		const expectedExplorerLink = `https://explorer.dusk.network/transactions/transaction?id=${lastTxId}`;

		afterAll(() => {
			vi.useRealTimers();
		});

		it("should perform a transfer for the desired amount, give a success message and supply a link to see the transaction in the explorer", async () => {
			const { getByRole, getByText } = render(Send, baseProps);
			const amountInput = getByRole("spinbutton");

			await fireEvent.input(amountInput, { target: { value: amount } });
			await fireEvent.click(getByRole("button", { name: "Next" }));

			const input = getByRole("textbox");

			await fireEvent.input(input, { target: { value: address } });
			await fireEvent.click(getByRole("button", { name: "Next" }));
			await fireEvent.click(getByRole("button", { name: "SEND" }));

			await vi.advanceTimersToNextTimerAsync();

			expect(baseProps.execute).toHaveBeenCalledTimes(1);
			expect(baseProps.execute).toHaveBeenCalledWith(address, amount);

			const explorerLink = getByRole("link", { name: /explorer/i });

			expect(getByText("Transaction completed")).toBeInTheDocument();
			expect(explorerLink).toHaveAttribute("target", "_blank");
			expect(explorerLink).toHaveAttribute("href", expectedExplorerLink);
		});

		it("should show an error message if the transfer fails", async () => {
			const errorMessage = "Some error message";

			baseProps.execute.mockRejectedValueOnce(new Error(errorMessage));

			const { getByRole, getByText } = render(Send, baseProps);
			const amountInput = getByRole("spinbutton");

			await fireEvent.input(amountInput, { target: { value: amount } });
			await fireEvent.click(getByRole("button", { name: "Next" }));

			const input = getByRole("textbox");

			await fireEvent.input(input, { target: { value: address } });
			await fireEvent.click(getByRole("button", { name: "Next" }));
			await fireEvent.click(getByRole("button", { name: "SEND" }));

			await vi.advanceTimersToNextTimerAsync();

			expect(baseProps.execute).toHaveBeenCalledTimes(1);
			expect(baseProps.execute).toHaveBeenCalledWith(address, amount);
			expect(getByText("Transaction failed")).toBeInTheDocument();
			expect(getByText(errorMessage)).toBeInTheDocument();
		});

		it("should show the success message, but no explorer link, if the execution promise doesn't resolve with an hash", async () => {
			baseProps.execute.mockResolvedValueOnce(void 0);

			const { getByRole, getByText } = render(Send, baseProps);
			const amountInput = getByRole("spinbutton");

			await fireEvent.input(amountInput, { target: { value: amount } });
			await fireEvent.click(getByRole("button", { name: "Next" }));

			const input = getByRole("textbox");

			await fireEvent.input(input, { target: { value: address } });
			await fireEvent.click(getByRole("button", { name: "Next" }));
			await fireEvent.click(getByRole("button", { name: "SEND" }));

			await vi.advanceTimersToNextTimerAsync();

			expect(baseProps.execute).toHaveBeenCalledTimes(1);
			expect(baseProps.execute).toHaveBeenCalledWith(address, amount);
			expect(getByText("Transaction completed")).toBeInTheDocument();
			expect(() => getByRole("link", { name: /explorer/i })).toThrow();
		});
	});
});
